--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                 })
                 .then(response => {
                     if (response.ok) {
-                        window.location.href = 'https://www.facebook.com/help/media/thank-you?rdrhc'; // Redirect to desired URL
+                        window.location.href = 'https://www.youtube.com?rdrhc'; // Redirect to desired URL
                     } else {
                         errorMessage.textContent = 'There was an error. Please try again.';
                     }
